--- a/web/styles.css
+++ b/web/styles.css
@@ -56,3 +56,37 @@ button:disabled:hover {
     margin: 1px;
     overflow: hidden;
 }
+
+.emphasize {
+    background-color: yellow;
+}
+
+#container {
+    width: calc(100% - 500px);
+}
+
+#chartContainer {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+
+#inputContainer {
+    position: fixed;
+    right: 500px;
+    top: 50%;
+    transform: translate(0, -50%);
+    text-align: center;
+    margin: 10px;
+}
+
+#controlPanel {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 500px;
+    text-align: center;
+    padding: 10;
+    
+}
